--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -1,7 +1,7 @@
 .global-footer {
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%; /* 1400p x*/
+  width: 100%; /* 1400p x*/
   background-color: #121212;
   padding: 2.5rem 6.25rem; /* 40px, 100px */
   border-style: solid;
