--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Atkinson Hyperlegible", sans-serif;
-  background-color: var(--neutral-n50);
   margin: 0;
 }
 
@@ -20,23 +19,50 @@ main > .container.main-subnav {
 
 .left-col {
   grid-area: left-col;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-nav.subnav {
+/* TODO: shaded box is a legacy block, and included here for backwards compatibility. once the content is updated this should be removed */
+.shaded_box {
+  padding: 0.5rem;
+}
+
+.shaded_box .box_header {
+  font-size: 1rem;
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+.shaded_box .box_header .olive {
+  display: none;
+}
+
+.shaded_box ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav.subnav, .shaded_box {
   border-radius: 0.5rem;
   border: 1px solid var(--primary-p75);
   padding: 0.5rem;
 }
 
-nav.subnav a {
+nav.subnav a, .shaded_box ul li {
   text-decoration: underline;
   display: block;
   padding: 0.5rem;
   padding-bottom: 0.75rem;
-  color: black;
   background-image: url("/images/chevron_right.svg");
   background-repeat: no-repeat;
   background-position: right center;
+}
+
+nav.subnav a, .shaded_box ul li a {
+  color: black;
 }
 
 .breadcrumbs {
