--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -8,7 +8,11 @@ body {
    to allow more flexible cascading: id rules are highly ranked while
    class names play nicer with other rules. */
 
-#site-container {
+.site-container {
   margin: 0 auto; /* floats the design center */
-  width: 1600px; /* change the site design width here */
+  width: 1400px; /* change the site design width here */
 }
+
+/* .site-container * {
+  width: 100vh;
+} */
