--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -57,11 +57,8 @@
   margin-top: 1rem; /* 15px  */
 }
 
-.global-footer a {
-  color: var(--default-white, #fff);
-}
-
-.global-footer h3 {
+.global-footer a,
+h3 {
   color: var(--default-white, #fff);
 }
 
@@ -89,11 +86,6 @@
   padding-top: 1rem;
 }
 
-/* @media (width <= 1280px) {
-  .link-container {
-    flex-direction: column;
-  }
-} */
 @media (width <= 768px) {
   .global-footer {
     display: flex;
