--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -1,4 +1,4 @@
-.global-footer {
+footer {
   margin-left: auto;
   margin-right: auto;
   width: 100%; /* 1400p x */
@@ -8,28 +8,28 @@
   border-width: 0.625rem 0 0; /* 10px */
   border-image: var(--gradient-brandreverse) 1;
   margin-top: 1.875rem; /* 30px */
-  color: var(--default-white, #fff);
-  font-size: 70%;
-  height: 29.25rem; /* 468px */
-  margin-bottom: 0;
-  clear: both;
+  color: #fff;
+  font-size: 0.7rem;
+  height: auto;
+  box-sizing: border-box;
 }
 
 .global-footer-container {
-  max-width: 87.5rem; /* 1400px */
+  max-width: 1400px;
   margin: auto;
+}
+
+.link-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .link-container-inner {
   display: flex;
   justify-content: flex-start;
   width: 100%;
-  padding: 0px;
 }
 
-.link-container {
-  display: flex;
-}
 .list-container {
   display: flex;
   flex-direction: column;
@@ -39,27 +39,14 @@
   margin-right: auto;
 }
 
-.text-footer {
-  color: var(--default-white, #fff);
-}
-
 .logo-contact-container {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 
-.copyright p {
-  margin-bottom: 0px;
-  padding: 0px;
-}
-
-.copyright {
-  margin-top: 1rem; /* 15px  */
-}
-
-.global-footer a,
-h3 {
-  color: var(--default-white, #fff);
+:is(footer a, h3) {
+  color: #fff;
 }
 
 .socials-logo-container {
@@ -67,6 +54,7 @@ h3 {
   align-items: center;
   gap: 4rem;
 }
+
 .socials img {
   padding-right: 2rem; /* 30px  */
   margin-bottom: 0;
@@ -76,6 +64,7 @@ h3 {
   margin-top: 0.5rem;
   margin-top: 1.5rem;
 }
+
 .footer-logo {
   padding: 0;
 }
@@ -87,9 +76,8 @@ h3 {
 }
 
 @media (width <= 768px) {
-  .global-footer {
+  footer {
     display: flex;
-    height: auto;
     padding: 2rem;
     justify-content: center;
   }
@@ -102,6 +90,7 @@ h3 {
     min-width: 10rem;
     margin-inline-end: 0px;
   }
+
   .list-container-inner {
     margin-bottom: 1.25rem;
   }
@@ -110,6 +99,7 @@ h3 {
     align-items: flex-start;
     flex-direction: column;
   }
+
   .copyright {
     margin-top: 2rem;
   }
@@ -123,6 +113,7 @@ h3 {
     width: 12rem;
     height: 3.5rem;
   }
+
   .socials-logo-container {
     display: block;
     padding: 1rem 0rem;
