--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -1,18 +1,18 @@
-.site-masthead {
+header {
   position: sticky;
   top: 0;
-  width: 100%;
   background: #fff;
 }
 
 .header-size {
   margin: 0 auto;
   max-width: 1400px;
-  height: 98px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: calc(100% - 3rem);
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 .header-logo {
@@ -24,18 +24,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 20px;
+  gap: 1.3rem;
 }
 
 .header-size a {
   text-decoration: transparent;
-  color: #070707;
+  color: var(--misc-dark);
   transition: 300ms;
 }
 
 .nav-links {
   display: flex;
-  gap: 32px;
+  gap: 2rem;
 }
 
 .nav-links a:hover,
@@ -47,14 +47,14 @@
 
 .search-container {
   border: 1px solid var(--neutral-n75);
-  border-radius: 64px;
-  width: 240px;
-  height: 40px;
+  border-radius: 4rem;
+  width: 15rem;
+  height: 2.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .site-search {
@@ -62,7 +62,7 @@
   align-items: center;
 }
 
-#search-bar {
+.search-bar {
   border: none;
   outline: none;
   background-color: transparent;
@@ -71,22 +71,25 @@
 
 .masthead-logo {
   display: flex;
-  width: 201px;
-  height: 58px;
   justify-content: center;
   align-items: center;
+}
+
+.masthead-logo img {
+  width: 12.6rem;
+  height: 3.6rem;
   flex-shrink: 0;
 }
 
 .header-button {
   background-image: var(--gradient-brand);
-  border-radius: 128px;
+  border-radius: 8rem;
   box-sizing: border-box;
   color: var(--primary-p400);
   display: flex;
-  height: 40px;
+  height: 2.5rem;
   padding: 2px;
-  width: 141px;
+  width: 8.8rem;
 }
 
 .header-button svg path {
@@ -101,9 +104,9 @@
   stroke: #fff;
 }
 
-.header-button span {
+.get-started {
   align-items: center;
-  border-radius: 64px;
+  border-radius: 4rem;
   display: flex;
   justify-content: center;
   background: #fff;
