html changes and file names/locations changed

--- a/layouts/components/footer.html
+++ b/layouts/components/footer.html
@@ -1,33 +1,25 @@
-<footer class="global-footer">
-  <div class="global-footer-container">
+<footer >
+  <div class="footer-container">
     <div class="link-container">
       <div class="link-container-inner">
-        <div class="list-container">
+        <nav >
           <a class="base" href="/about/index.html"><h3>About</h3></a>
           <a href="/about/annual-reports/">Annual Reports</a>
           <a href="/about/core-team/">Core Team</a>
           <a href="/about/mirrors/">Mirrors</a>
           <a href="/about/related-projects/">Related Projects</a>
           <a href="/about/code-of-conduct/">Code of Conduct</a>
-        </div>
-        <div class="list-container">
+        </nav>
+        <nav>
           <a href="/developers/index.html"><h3>Community</h3></a>
-          <a href="https://contributions.bioconductor.org/develop-overview.html"
-            >Package Guidelines</a
-          >
-          <a
-            href="https://contributions.bioconductor.org/submission-overview.html"
-            >Package Submission</a
-          >
+          <a href="https://contributions.bioconductor.org/develop-overview.html">Package Guidelines</a>
+          <a href="https://contributions.bioconductor.org/submission-overview.html">Package Submission</a>
           <a href="/developers/release-schedule/">Release Schedule</a>
-          <a
-            href="https://contributions.bioconductor.org/git-version-control.html"
-            >Source Control</a
-          >
-        </div>
+          <a href="https://contributions.bioconductor.org/git-version-control.html">Source Control</a>
+        <nav>
       </div>
       <div class="link-container-inner">
-        <div class="list-container">
+        <nav>
           <a href="/help/index.html"><h3>Learn</h3></a>
           <a href="/packages/release/workflows/">Workflows</a>
           <a href="/help/package-vignettes/">Package Vignettes</a>
@@ -39,45 +31,33 @@
           <a href="/help/docker/">Docker Images</a>
           <a href="https://anvil.bioconductor.org/">Bioc in AnVIL</a>
           <a href="/help/community/">Community Resources</a>
-        </div>
-        <div class="list-container">
+        </nav>
+        <nav>
           <a href="/install/index.html"><h3>Get started</h3></a>
           <a href="/install/index.html#install-R">Install R</a>
-          <a href="/install/index.html#find-bioconductor-packages">
-            Find Bioconductor Packages</a
-          >
-          <a href="/install/index.html#install-bioconductor-packages"
-            >Install Bioconductor Packages</a
-          >
-          <a href="/install/index.html#update-bioconductor-packages"
-            >Update Bioconductor Packages</a
-          >
-        </div>
+          <a href="/install/index.html#find-bioconductor-packages">Find Bioconductor Packages</a>
+          <a href="/install/index.html#install-bioconductor-packages">Install Bioconductor Packages</a>
+          <a href="/install/index.html#update-bioconductor-packages">Update Bioconductor Packages</a>
+        <nav>
       </div>
     </div>
     <div class="logo-contact-container">
       <div class="copyright">
         <p>
           Contact us:
-          <a class="text-underline" href="https://support.bioconductor.org/"
-            >support.bioconductor.org</a
-          >
+          <a class="text-underline" href="https://support.bioconductor.org/">support.bioconductor.org</a>
         </p>
         <p>Copyright &copy; 2003 - <%= Time.now.year %> Bioconductor</p>
       </div>
 
       <div class="socials-logo-container">
         <div class="socials">
-          <span>
             <img src="/images/icons/svgs/twitter.svg" />
             <img src="/images/icons/svgs/youtube.svg" />
             <img src="/images/icons/svgs/linkedin.svg" />
             <img src="/images/icons/svgs/mastodon.svg" />
-          </span>
         </div>
-        <span class="footer-logo">
-          <img src="/images/logo/svg/BC-Logo-White.svg" alt="" />
-        </span>
+          <img class="footer-logo" src="/images/logo/svg/BC-Logo-White.svg" alt="BioConductor Logo in White" />
       </div>
     </div>
   </div>
