--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -14,7 +14,10 @@ footer {
   box-sizing: border-box;
 }
 
-.global-footer-container {
+footer a {
+  color: #fff;
+}
+.footer-container {
   max-width: 1400px;
   margin: auto;
 }
@@ -30,7 +33,7 @@ footer {
   width: 100%;
 }
 
-.list-container {
+:is(.link-container-inner nav) {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -43,10 +46,6 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-}
-
-:is(footer a, h3) {
-  color: #fff;
 }
 
 .socials-logo-container {
@@ -66,10 +65,6 @@ footer {
 }
 
 .footer-logo {
-  padding: 0;
-}
-
-.footer-logo img {
   width: 12rem;
   height: 3.5rem;
   padding-top: 1rem;
@@ -86,7 +81,7 @@ footer {
     display: block;
   }
 
-  .list-container {
+  :is(.link-container-inner nav) {
     min-width: 10rem;
     margin-inline-end: 0px;
   }
@@ -105,11 +100,6 @@ footer {
   }
 
   .footer-logo {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-
-  .footer-logo img {
     width: 12rem;
     height: 3.5rem;
   }
