put footer under page content and added breakpoint in p tag(copyright)

--- a/layouts/components/footer.html
+++ b/layouts/components/footer.html
@@ -43,11 +43,10 @@
     </div>
     <div class="logo-contact-container">
       <div class="copyright">
-        <p>
-          Contact us:
-          <a class="text-underline" href="https://support.bioconductor.org/">support.bioconductor.org</a>
+        <p> 
+          Contact us:<a class="text-underline" href="https://support.bioconductor.org/">support.bioconductor.org</a><br/>
+          Copyright &copy; 2003 - <%= Time.now.year %> Bioconductor
         </p>
-        <p>Copyright &copy; 2003 - <%= Time.now.year %> Bioconductor</p>
       </div>
 
       <div class="socials-logo-container">
