--- a/layouts/_footer.html
+++ b/layouts/_footer.html
@@ -1,54 +1,29 @@
 <div id="SiteGlobalFooter" class="SiteGlobalFooter">
-  <span class="global_footer_logo_bc noprint"
-    ><img
-      src="/images/logo_global_footer_bioconductor.gif"
-      height="51"
-      width="154"
-      alt=""
-  /></span>
+
+  <span class="global_footer_logo_bc noprint"><img src="/images/logo_global_footer_bioconductor.gif" height="51" width="154" alt=""/></span>
 
   <div class="attribution_copyright">
-    <p>
-      Contact us:
-      <a href="https://support.bioconductor.org/">support.bioconductor.org</a>
-    </p>
+    <p>Contact us: <a href="https://support.bioconductor.org/">support.bioconductor.org</a></p>
     <p>Copyright &copy; 2003 - <%= Time.now.year %>, Bioconductor</p>
   </div>
 
-  <a name="site-map"></a>
-  <!-- accessibility anchor -->
+  <a name="site-map"></a> <!-- accessibility anchor -->
   <ul class="footer_nav_list noprint">
     <li class="footer_nav_list_element footer_nav_list_element_0">
       <b><a href="/index.html">Home</a></b>
     </li>
     <li class="footer_nav_list_element footer_nav_list_element_1">
       <ul>
-        <li>
-          <b><a href="/install/index.html">Install</a></b>
-        </li>
+        <li><b><a href="/install/index.html">Install</a></b></li>
         <li><a href="/install/index.html#install-R">Install R</a></li>
-        <li>
-          <a href="/install/index.html#find-bioconductor-packages"
-            >Find Bioconductor Packages</a
-          >
-        </li>
-        <li>
-          <a href="/install/index.html#install-bioconductor-packages"
-            >Install Bioconductor Packages</a
-          >
-        </li>
-        <li>
-          <a href="/install/index.html#update-bioconductor-packages"
-            >Update Bioconductor Packages</a
-          >
-        </li>
+        <li><a href="/install/index.html#find-bioconductor-packages">Find Bioconductor Packages</a></li>
+        <li><a href="/install/index.html#install-bioconductor-packages">Install Bioconductor Packages</a></li>
+        <li><a href="/install/index.html#update-bioconductor-packages">Update Bioconductor Packages</a></li>
       </ul>
     </li>
     <li class="footer_nav_list_element footer_nav_list_element_2">
       <ul>
-        <li>
-          <b><a href="/help/index.html">Help</a></b>
-        </li>
+        <li><b><a href="/help/index.html">Help</a></b></li>
         <li><a href="/packages/release/workflows/">Workflows</a></li>
         <li><a href="/help/package-vignettes/">Package Vignettes</a></li>
         <li><a href="/help/faq/">FAQ</a></li>
@@ -57,79 +32,53 @@
         <li><a href="/help/course-materials/">Courses</a></li>
         <li><a href="/help/publications/">Publications</a></li>
         <li><a href="/help/docker/">Docker Images</a></li>
-        <li><a href="https://anvil.bioconductor.org/">Bioc in AnVIL</a></li>
+        <li><a href="https://anvil.bioconductor.org/">Bioc in AnVIL</a></li>	
         <li><a href="/help/community/">Community Resources</a></li>
+
       </ul>
     </li>
     <li class="footer_nav_list_element footer_nav_list_element_3">
       <ul>
-        <li>
-          <b><a href="/developers/index.html">Developers</a></b>
-        </li>
-        <li>
-          <a href="https://contributions.bioconductor.org/develop-overview.html"
-            >Package Guidelines</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://contributions.bioconductor.org/submission-overview.html"
-            >Package Submission</a
-          >
-        </li>
-        <li><a href="/developers/release-schedule/">Release Schedule</a></li>
-        <li>
-          <a
-            href="https://contributions.bioconductor.org/git-version-control.html"
-            >Source Control</a
-          >
-        </li>
+        <li><b><a href="/developers/index.html">Developers</a></b></li>
+		<li><a href="https://contributions.bioconductor.org/develop-overview.html">Package Guidelines</a></li>
+		<li><a href="https://contributions.bioconductor.org/submission-overview.html">Package Submission</a></li>
+		<li><a href="/developers/release-schedule/">Release Schedule</a></li>
+		<li><a href="https://contributions.bioconductor.org/git-version-control.html">Source Control</a></li>
       </ul>
     </li>
     <li class="footer_nav_list_element footer_nav_list_element_4">
       <ul>
-        <li>
-          <b><a href="/about/index.html">About</a></b>
-        </li>
+        <li><b><a href="/about/index.html">About</a></b></li>
         <li><a href="/about/annual-reports/">Annual Reports</a></li>
         <li><a href="/about/core-team/">Core Team</a></li>
         <li><a href="/about/mirrors/">Mirrors</a></li>
         <li><a href="/about/related-projects/">Related Projects</a></li>
         <li><a href="/about/code-of-conduct/">Code of Conduct</a></li>
-      </ul>
+     </ul>
     </li>
   </ul>
-  <br style="clear: both" />
+  <br style="clear:both"/>
   &nbsp;
+
 </div>
 
+
 <div id="SiteMasthead" class="SiteMasthead">
-  <a name="site-navigation"></a>
-  <!-- accessibility anchor -->
+
+  <a name="site-navigation"></a> <!-- accessibility anchor -->
 
   <span class="logo_vanity_bar noprint"></span>
 
   <a href="/">
-    <img
-      src="/images/logo_bioconductor.gif"
-      border="0"
-      class="masthead_logo"
-      height="78"
-      width="260"
-      alt="Bioconductor - open source software for bioinformatics"
-    />
+	<img src="/images/logo_bioconductor.gif" border="0" class="masthead_logo" height="78" width="260" alt="Bioconductor - open source software for bioinformatics"/>
   </a>
 
   <div id="SiteMastheadRight" class="SiteMastheadRight">
     <div id="SiteMastheadRightBackground" class="SiteMastheadRightBackground">
-      <a name="site-search"></a>
-      <!-- accessibility anchor -->
-      <form
-        class="site_search"
-        id="search_form"
-        method="GET"
-        action="/help/search/index.html"
-      >
+
+      <a name="site-search"></a> <!-- accessibility anchor -->
+      <form class="site_search" id="search_form" method="GET"
+            action="/help/search/index.html">
         Search: <input id="q" name="q" />
       </form>
 
@@ -150,8 +99,8 @@
           <a href="/about/">About</a>
         </li>
       </ul>
+
     </div>
   </div>
-</div>
 
-<!-- testing... -->
+</div>
