--- a/layouts/course.html
+++ b/layouts/course.html
@@ -2,9 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
   <%= render("/_sitehead/") %>
   <body>
-    <%= render("/components/header/") %> <%= render("/_nav/",
-    <%= render("/_nav/", :section_navigation => has_subnav?(@item) &&
-    subnav_items(@item).length > 0) %>
+    <%= render("/components/header/") %>
+    <%= render("/_nav/", :section_navigation => has_subnav?(@item) && subnav_items(@item).length > 0) %>
     <main>
       <div class='container'>
         <% if @item[:hero] %>d
