--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -24,7 +24,7 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 1.3rem;
+  gap: 1.5rem;
 }
 
 .header-size a {
@@ -36,6 +36,7 @@ header {
 .nav-links {
   display: flex;
   gap: 2rem;
+  margin-right: 0.5rem;
 }
 
 .nav-links a:hover,
@@ -60,13 +61,27 @@ header {
 .site-search {
   display: flex;
   align-items: center;
+  gap: 0.38rem
 }
 
 .search-bar {
   border: none;
   outline: none;
   background-color: transparent;
-  padding-left: 5px;
+  padding-left: 0.25rem;
+  padding-top: 3px;
+}
+
+input::placeholder {
+  font-size: 1rem;
+  font-style: normal;
+  /* font-weight: 400; */
+  line-height: 130%; /* 1.3rem */
+  color: var(--misc-dark)
+}
+
+input:focus::placeholder {
+  color: transparent;
 }
 
 .masthead-logo {
@@ -88,7 +103,7 @@ header {
   color: var(--primary-p400);
   display: flex;
   height: 2.5rem;
-  padding: 2px;
+  padding: 1px;
   width: 8.8rem;
 }
 
@@ -110,18 +125,23 @@ header {
   display: flex;
   justify-content: center;
   background: #fff;
+  color: var(--primary-p400);
+  line-height: 0;
   transition: background 0.5s ease;
   width: 100%;
   gap: 5px;
   margin: 1px;
+  padding-left: 0.75rem;
+  padding-right: 0.4rem;
 }
 
 .header-button:hover span {
   background: var(--primary-p400);
+  color: #fff;
 }
 
-@media (width <= 700px) {
-  .header-desktop {
+@media (width <= 768px) {
+  /* .header-desktop {
     display: none;
-  }
+  } */
 }
