added doctype back

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,4 +1,4 @@
-<!-- <%= doctype %> -->
+<%= doctype %>
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"
 prefix="og: http://ogp.me/ns#">
   <%= render("/_sitehead/") %>
