added mobile css

--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -12,14 +12,19 @@
       </a>
     </div>
 
-    <nav class="header-desktop">
+    <nav class="header-nav">
       <div class="nav-links">
-        <a class="format-bold" href="/about/">About</a>
-        <a class="format-bold" href="/developers/">Developers</a>
-        <a class="format-bold" href="/help/">Learn</a>
+        <a id="mobile-link" class="format-bold" href="/about/">About</a>
+      </br>
+        <a id="mobile-link" class="format-bold" href="/developers/"
+          >Developers</a
+        >
+              </br>
+        <a id="mobile-link" class="format-bold" href="/help/">Learn</a>
       </div>
+      </br>
 
-      <div class="search-container">
+      <div id="mobile-link" class="search-container">
         <form
           class="site-search"
           id="search-form"
@@ -36,7 +41,7 @@
         </form>
       </div>
 
-      <a class="header-button format-bold" href="/install/">
+      <a id="mobile-link" class="header-button format-bold" href="/install/">
         <span class="get-started format-bold">
           Get Started
           <svg
@@ -57,5 +62,11 @@
         </span>
       </a>
     </nav>
+
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
   </div>
 </header>
