--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -20,7 +20,7 @@ header {
   align-items: center;
 }
 
-.header-desktop {
+.header-nav {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -120,8 +120,117 @@ header {
   background: var(--primary-p400);
 }
 
-@media (width <= 700px) {
-  .header-desktop {
-    display: none;
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  border-radius: 25px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+
+@media (width <= 768px) {
+  .site-masthead {
+    box-shadow: 0px -0.5px 0px 0px rgba(0, 23, 74, 0.02),
+      0px 1px 5px 0px rgba(0, 23, 74, 0.14);
+  }
+
+  .header-size {
+    margin: 0 auto;
+    height: 98px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+
+  .header-nav {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    transition: 0.3s;
+    gap: 0rem;
+    z-index: -1;
+  }
+
+  .header-nav.active {
+    top: 10.7rem;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0rem;
+  }
+
+  .nav-links div {
+    width: 100%;
+    border-top: 1px solid var(--neutral-n75);
+    border-bottom: 1px solid var(--neutral-n75);
+  }
+
+  .nav-links a {
+    text-decoration: none !important;
+    text-align: left;
+  }
+
+  .search-container {
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 0.75rem;
+    padding-right: 0rem;
+  }
+
+  .header-button {
+    background-image: var(--gradient-brand);
+    color: var(--primary-p400);
+    display: flex;
+    height: 40px;
+    padding: 2px;
+    width: 100%;
+  }
+
+  .header-button span {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .nav-links a,
+  .search-container,
+  .header-button {
+    margin: 0.5rem 1.5rem;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
   }
 }
