--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -75,8 +75,7 @@ header {
 input::placeholder {
   font-size: 1rem;
   font-style: normal;
-  /* font-weight: 400; */
-  line-height: 130%; /* 1.3rem */
+  line-height: 1.3rem;
   color: var(--misc-dark)
 }
 
@@ -126,7 +125,6 @@ input:focus::placeholder {
   justify-content: center;
   background: #fff;
   color: var(--primary-p400);
-  line-height: 0;
   transition: background 0.5s ease;
   width: 100%;
   gap: 5px;
@@ -141,7 +139,4 @@ input:focus::placeholder {
 }
 
 @media (width <= 768px) {
-  /* .header-desktop {
-    display: none;
-  } */
 }
