--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -61,7 +61,7 @@ header {
 .site-search {
   display: flex;
   align-items: center;
-  gap: 0.38rem
+  gap: 0.38rem;
 }
 
 .search-bar {
@@ -76,7 +76,7 @@ input::placeholder {
   font-size: 1rem;
   font-style: normal;
   line-height: 1.3rem;
-  color: var(--misc-dark)
+  color: var(--misc-dark);
 }
 
 input:focus::placeholder {
@@ -136,7 +136,4 @@ input:focus::placeholder {
 .header-button:hover span {
   background: var(--primary-p400);
   color: #fff;
-}
-
-@media (width <= 768px) {
 }
