--- a/layouts/components/footer.html
+++ b/layouts/components/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <div class="link-container">
       <div class="link-container-inner">
-        <nav >
+        <nav>
           <a href="/about/index.html"><h3>About</h3></a>
           <a href="/about/annual-reports/">Annual Reports</a>
           <a href="/about/core-team/">Core Team</a>
@@ -16,7 +16,7 @@
           <a href="https://contributions.bioconductor.org/submission-overview.html">Package Submission</a>
           <a href="/developers/release-schedule/">Release Schedule</a>
           <a href="https://contributions.bioconductor.org/git-version-control.html">Source Control</a>
-        <nav>
+        </nav>
       </div>
       <div class="link-container-inner">
         <nav>
@@ -38,7 +38,7 @@
           <a href="/install/index.html#find-bioconductor-packages">Find Bioconductor Packages</a>
           <a href="/install/index.html#install-bioconductor-packages">Install Bioconductor Packages</a>
           <a href="/install/index.html#update-bioconductor-packages">Update Bioconductor Packages</a>
-        <nav>
+        </nav>
       </div>
     </div>
     <div class="logo-contact-container">
