removed gaps and added padding for mobile

--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -15,10 +15,13 @@
     <nav class="header-nav">
       <div class="nav-links">
         <a id="mobile-link" class="format-bold" href="/about/">About</a>
+        <hr class="solid" />
         <a id="mobile-link" class="format-bold" href="/developers/"
           >Developers</a
         >
+        <hr class="solid" />
         <a id="mobile-link" class="format-bold" href="/help/">Learn</a>
+        <hr class="solid" />
       </div>
       <div id="mobile-link" class="search-container">
         <form
