--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -156,6 +156,10 @@ br {
   background-color: #101010;
 }
 
+hr.solid {
+  display: none;
+}
+
 @media (width <= 768px) {
   .header-size {
     display: flex;
@@ -197,12 +201,14 @@ br {
     width: 100vw;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 0;
+    margin-right: 0;
   }
 
   .nav-links a {
     text-decoration: none !important;
     text-align: left;
+    padding: 0.5rem 0;
   }
 
   .search-container {
