--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -162,7 +162,6 @@ hr.solid {
 
 @media (width <= 768px) {
   .header-size {
-    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0.5rem;
@@ -170,7 +169,6 @@ hr.solid {
 
   .header-nav {
     position: fixed;
-    display: flex;
     flex-direction: column;
     width: 100vw;
     top: -100%;
@@ -197,18 +195,18 @@ hr.solid {
   }
 
   .nav-links {
-    display: flex;
-    width: 100vw;
     flex-direction: column;
-    align-items: flex-start;
     gap: 0;
-    margin-right: 0;
+    padding-left: 2rem;
   }
 
   .nav-links a {
     text-decoration: none !important;
-    text-align: left;
+    width: 100vw;
     padding: 0.5rem 0;
+    line-height: 1.3rem;
+    border-bottom: 1px solid var(--neutral-n75);
+    padding-left: 1.5rem;
   }
 
   .search-container {
@@ -237,7 +235,7 @@ hr.solid {
     color: #fff;
     flex-direction: column;
     align-items: flex-start;
-    margin: 0.5rem 1.5rem;
+    margin: 0.5rem 0.5rem;
   }
 
   .get-started svg {
@@ -247,7 +245,7 @@ hr.solid {
   .nav-links a,
   .search-container,
   .header-button {
-    margin: 0.5rem 1.5rem;
+    margin: 0.5rem 0;
   }
 
   .hamburger {
