--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -237,7 +237,7 @@ hr.solid {
     color: #fff;
     flex-direction: column;
     align-items: flex-start;
-    margin: 0.5rem 0.5rem;
+    margin: 0.5rem;
   }
 
   .get-started svg {
