--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -50,14 +50,14 @@ h6 {
   font-size: 1.1rem; /* 18px */
 }
 
-.hero {
+.text-hero {
   font-size: 5rem; /* 80px */
   line-height: 105%;
 }
 
 @media screen and (width <= 700px) {
   /* 700px */
-  .hero {
+  .text-hero {
     font-size: 2.5rem; /* 40px */
   }
 
@@ -94,6 +94,7 @@ a {
   line-height: 130%;
   letter-spacing: 0;
   text-decoration: none;
+  color: #070707;
 }
 
 .code {
