--- a/layouts/components/index_hero.html
+++ b/layouts/components/index_hero.html
@@ -1,1 +1,15 @@
-<p>hello, world</p>
+<h1 class="text-hero format-bold">
+  Open source software for <mark>Bioinformatics</mark>
+</h1>
+<p class="text-large">
+  The Bioconductor project aims to develop and share open source software for
+  precise and repeatable analysis of biological data.<br />
+  We foster an inclusive and collaborative community of developers and data
+  scientists.
+</p>
+<a href="/install/">
+  <button class="hero-button format-bold">
+    Get started
+    <img src="images/icons/svgs/chevron-right.svg" alt="chevron-right" />
+  </button>
+</a>
