--- a/assets/style/buttons.css
+++ b/assets/style/buttons.css
@@ -1,28 +1,27 @@
 button {
-  height: 32px;
-  padding: 0px 8px;
+  height: 2rem;
+  padding: 0 0.5rem;
   border-radius: 8rem;
   background: var(--primary-p400);
   transition: 0.3s;
   color: #fff;
   border: none;
-  font-family: "Atkinson Hyperlegible";
 }
+
 button:hover {
   background: var(--primary-p500);
 }
+
 .hero-button {
-  font-family: Atkinson Hyperlegible;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%;
   text-align: center;
   height: 54px;
-  padding: 0px 26px;
+  padding: 0 1.625rem;
   border-radius: 16rem;
   background: var(--gradient-brandreverse);
-  line-height: 120%;
+  line-height: 1.2rem;
   margin-bottom: 0.3rem;
   transition: 0.3s;
   cursor: pointer;
@@ -36,5 +35,5 @@ button:hover {
 
 .hero-button:hover {
   background: var(--gradient-brand);
-  box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.18) inset;
+  box-shadow: 0 5px 4px 0 rgba(0 0 0 18%) inset;
 }
