--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -21,32 +21,44 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.text-h1,
+.text-h2,
+.text-h3,
+.text-h4,
+.text-h5,
+.text-h6 {
   line-height: 120%;
   margin-bottom: 0.3rem; /* 5px  */
 }
 
-h1 {
+h1,
+.text-h1 {
   font-size: 2.25rem; /* 36px */
 }
 
-h2 {
+h2,
+.text-h2 {
   font-size: 2rem; /* 32px */
 }
 
-h3 {
+h3,
+.text-h3 {
   font-size: 1.6rem; /* 25px */
 }
 
-h4 {
+h4,
+.text-h4 {
   font-size: 1.5rem; /* 23px */
 }
 
-h5 {
+h5,
+.text-h5 {
   font-size: 1.2rem; /* 19px */
 }
 
-h6 {
+h6,
+.text-h6 {
   font-size: 1.1rem; /* 18px */
 }
 
@@ -61,33 +73,40 @@ h6 {
     font-size: 2.5rem; /* 40px */
   }
 
-  h1 {
+  h1,
+  .text-h1 {
     font-size: 2.1rem; /* 34px */
   }
 
-  h2 {
+  h2,
+  .text-h2 {
     font-size: 1.5rem; /* 24px */
   }
 
-  h3 {
+  h3,
+  .text-h3 {
     font-size: 1.4rem; /* 22px */
   }
 
-  h4 {
+  h4,
+  .text-h4 {
     font-size: 1.25rem; /* 20px */
   }
 
-  h5 {
+  h5,
+  .text-h5 {
     font-size: 1.125rem; /* 18px */
   }
 
-  h6 {
+  h6,
+  .text-h6 {
     font-size: 1.1rem; /* 17px */
   }
 }
 
 p,
-a {
+a,
+.base {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 1rem; /* 16px */
@@ -123,16 +142,16 @@ a {
   text-decoration: underline;
 }
 
-.text-xsmall {
+.base-xsmall {
   font-size: 0.6rem; /* 10px */
   line-height: 120%;
 }
 
-.text-small {
+.base-small {
   font-size: 0.8rem; /* 13px */
   line-height: 120%;
 }
 
-.text-large {
+.base-large {
   font-size: 1.25rem; /* 20px */
 }
