--- a/layouts/components/index_hero.html
+++ b/layouts/components/index_hero.html
@@ -7,9 +7,7 @@
   We foster an inclusive and collaborative community of developers and data
   scientists.
 </p>
-<a href="/install/">
-  <button class="hero-button text-h6 format-bold">
-    Get started
-    <img src="images/icons/svgs/chevron-right.svg" alt="chevron-right" />
-  </button>
+<a class="button button-hero text-h6 format-bold" href="/install/">
+  Get started
+  <img src="images/icons/svgs/chevron-right.svg" alt="chevron-right" />
 </a>
