--- a/assets/style/buttons.css
+++ b/assets/style/buttons.css
@@ -1,5 +1,5 @@
 .button {
-  padding: 0.6rem 1.625rem 0.6rem;
+  padding: 0.6rem 1.625rem;
   border-radius: 8rem;
   background: var(--primary-p400);
   transition: 0.3s;
@@ -13,7 +13,7 @@
 }
 
 .button-hero {
-  padding: 1rem 1.625rem 1rem;
+  padding: 1rem 1.625rem;
   border-radius: 16rem;
   background: var(--gradient-brandreverse);
   margin-bottom: 0.3rem;
