--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -3,6 +3,10 @@ body {
   margin: 0;
 }
 
+main {
+  background: var(--neutral-n50);
+}
+
 .container {
   margin: 0 auto;
   width: calc(100% - 3rem);
@@ -13,8 +17,7 @@ main > .container.main-subnav {
   display: grid;
   gap: 2rem;
   grid-template-columns: 300px 1fr;
-  grid-template-areas:
-    "left-col .";
+  grid-template-areas: "left-col .";
 }
 
 .left-col {
@@ -45,13 +48,15 @@ main > .container.main-subnav {
   margin: 0;
 }
 
-nav.subnav, .shaded_box {
+nav.subnav,
+.shaded_box {
   border-radius: 0.5rem;
   border: 1px solid var(--primary-p75);
   padding: 0.5rem;
 }
 
-nav.subnav a, .shaded_box ul li {
+nav.subnav a,
+.shaded_box ul li {
   text-decoration: underline;
   display: block;
   padding: 0.5rem;
@@ -61,7 +66,8 @@ nav.subnav a, .shaded_box ul li {
   background-position: right center;
 }
 
-nav.subnav a, .shaded_box ul li a {
+nav.subnav a,
+.shaded_box ul li a {
   color: black;
 }
 
@@ -94,11 +100,12 @@ nav.subnav a, .shaded_box ul li a {
     display: block;
   }
 
-.left-col {
-  display: none;
-}
+  .left-col {
+    display: none;
+  }
 
-.site-container {
-  margin: 0 auto; /* floats the design center */
-  max-width: 1400px; /* change the site design width here */
+  .site-container {
+    margin: 0 auto; /* floats the design center */
+    max-width: 1400px; /* change the site design width here */
+  }
 }
