--- a/layouts/components/index_hero.html
+++ b/layouts/components/index_hero.html
@@ -1,7 +1,7 @@
 <h1 class="text-hero format-bold">
   Open source software for <mark>Bioinformatics</mark>
 </h1>
-<p class="base-large">
+<p class="text-large">
   The Bioconductor project aims to develop and share open source software for
   precise and repeatable analysis of biological data.<br />
   We foster an inclusive and collaborative community of developers and data
