--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -23,7 +23,8 @@ h4,
 h5,
 h6 {
   line-height: 120%;
-  margin-bottom: 0.3rem; /* 5px  */
+  margin-block-end: 0.5rem;
+  margin-block-start: 0.5rem;
 }
 
 h1 {
