--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -1,3 +1,4 @@
+<!-- htmllint preset="none" -->
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
