Added markdown and code highlight library

--- a/layouts/components/examples/sidebar.html
+++ b/layouts/components/examples/sidebar.html
@@ -1,6 +1,6 @@
-<p>Jump to:</p>
+<nav class="internal-nav" aria-label="Page navigation">
+  <p>Jump to:</p>
 
-<nav>
   <a href="#heading1">Heading text 1</a>
   <a href="#heading2">Heading text 2</a>
   <a href="#heading3">Heading text 3</a>
