--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -73,4 +73,8 @@
   <script type="text/javascript" src="/js/bioc-style.js"></script>
   <script type="text/javascript" src="/js/versions.js"></script>
 
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+
+  <script>hljs.highlightAll();</script>
 </head>
