Added styling for code blocks

--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -56,11 +56,13 @@
   %>
     
   <title>Bioconductor<%= title %></title>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
   <link rel="stylesheet" type="text/css" href="/style/fonts.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/colors.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/announcement.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style/header.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/code.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor-v2.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/header.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/footer.css" media="screen"/>
   <link rel="SHORTCUT ICON" type="image/x-icon" href="/favicon.ico" />
   <link rel="ICON" type="image/x-icon" href="/favicon.ico" />
@@ -73,7 +75,6 @@
   <script type="text/javascript" src="/js/bioc-style.js"></script>
   <script type="text/javascript" src="/js/versions.js"></script>
 
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 
   <script>hljs.highlightAll();</script>
