html-linter changed, scripts changed

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -39,5 +39,6 @@ prefix="og: http://ogp.me/ns#">
 
     </div>
 	<%= render("/components/footer/") %>
+  <%= render("/components/sitescripts/") %>
   </body>
 </html>
