put back comment

--- a/layouts/components/sitescripts.html
+++ b/layouts/components/sitescripts.html
@@ -26,6 +26,7 @@
 <% else %>
 <script type="text/javascript" src="/js/jquery.js"></script>
 <% end %>
+<%# see about including this conditionally, only needed for pkg landing pages:%>
 <script src="/js/jquery.tools.min.js"></script>
 <script type="text/javascript" src="/js/bioconductor.js"></script>
 <% if item.identifier =~ /help\/cloud/ and not item.identifier =~ /launch/ %>
