changed ids to class

--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -14,13 +14,13 @@
 
     <nav class="header-nav">
       <div class="nav-links">
-        <a id="mobile-link" class="format-bold" href="/about/">About</a>
-        <a id="mobile-link" class="format-bold" href="/developers/"
+        <a class="format-bold mobile-link" href="/about/">About</a>
+        <a class="format-bold mobile-link" href="/developers/"
           >Developers</a
         >
-        <a id="mobile-link" class="format-bold" href="/help/">Learn</a>
+        <a class="format-bold mobile-link" href="/help/">Learn</a>
       </div>
-      <div id="mobile-link" class="search-container">
+      <div class="search-container mobile-link">
         <form
           class="site-search"
           id="search-form"
@@ -37,7 +37,7 @@
         </form>
       </div>
 
-      <a id="mobile-link" class="header-button format-bold" href="/install/">
+      <a class="header-button format-bold mobile-link" href="/install/">
         <span class="get-started format-bold">
           Get Started
           <svg
