--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -15,9 +15,7 @@
     <nav class="header-nav">
       <div class="nav-links">
         <a class="format-bold mobile-link" href="/about/">About</a>
-        <a class="format-bold mobile-link" href="/developers/"
-          >Developers</a
-        >
+        <a class="format-bold mobile-link" href="/developers/">Developers</a>
         <a class="format-bold mobile-link" href="/help/">Learn</a>
       </div>
       <div class="search-container mobile-link">
