--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -74,8 +74,8 @@
   <script type="text/javascript" src="/js/jquery.timeago.js"></script>
   <script type="text/javascript" src="/js/bioc-style.js"></script>
   <script type="text/javascript" src="/js/versions.js"></script>
+  <script type="text/javascript" src="/js/code_blocks.js"></script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 
-  <script>hljs.highlightAll();</script>
 </head>
