--- a/assets/style/buttons.css
+++ b/assets/style/buttons.css
@@ -26,9 +26,14 @@
   vertical-align: middle;
 }
 
-/* stylelint-disable */
 .button-hero:hover {
   background: var(--gradient-brand);
-  box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.18) inset;
+  box-shadow: 0 5px 4px 0 rgba(0 0 0 / 18%) inset;
 }
-/* stylelint-enable */
+
+@media (prefers-reduced-motion: reduce) {
+  .button-hero:hover {
+    background: var(--gradient-brandreverse);
+    box-shadow: none;
+  }
+}
