--- a/layouts/components/header.html
+++ b/layouts/components/header.html
@@ -36,8 +36,8 @@
         </form>
       </div>
 
-      <a class="header-button format-bold" href="/install/">
-        <span class="get-started format-bold">
+      <a class="brand-border-button" href="/install/">
+        <span class="span-brand format-bold">
           Get Started
           <svg
             xmlns="http://www.w3.org/2000/svg"
