--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -75,6 +75,7 @@
 
 .info .brand-border-button {
     height: 2.5rem;
+    width: 100%
 }
 
 @media (width <= 768px) {
@@ -92,3 +93,17 @@
         width: 60%;
     }
 }
+
+@media (prefers-reduced-motion: reduce) {
+    .learn-nav a:hover {
+      background: inherit;
+      color: inherit;
+      transition: none;
+    }
+
+    .learn-nav a:hover svg path {
+        stroke: var(--primary-p75);
+        transition: none;
+        transform: none;
+    }
+  }
