--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -1,13 +1,15 @@
 .information-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   background-color: inherit;
   gap: 2rem;
 }
 
-.information-container section {
-  flex: 1;
-  max-height: 382px;
+.news,
+.packages,
+.about-bioconductor {
   max-width: 382px;
+  min-width: 382px;
   padding: 2rem;
   border-radius: 0.5rem;
   background-color: white;
@@ -30,6 +32,7 @@
 
 @media screen and (width <= 700px) {
   .information-container {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
