--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -61,6 +61,7 @@
   <link rel="stylesheet" type="text/css" href="/style/colors.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/announcement.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/code.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/gallery.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor-v2.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/header.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/footer.css" media="screen"/>
