Added some more styling around the gallery

--- a/assets/style/gallery.css
+++ b/assets/style/gallery.css
@@ -12,4 +12,10 @@
 .gallery-card img {
   display: block;
   width: 100%;
+  margin-bottom: 1rem;
+}
+
+.gallery-card a {
+  color: black;
+  text-decoration: underline;
 }
