--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -23,7 +23,7 @@ h4,
 h5,
 h6 {
   line-height: 120%;
-  margin-bottom: 0.3rem; /* 5px  */
+  margin: 0.3rem 0; /* 5px  */
 }
 
 h1 {
@@ -88,8 +88,7 @@ h6 {
 
 p,
 a {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0.3rem 0;
   font-size: 1rem; /* 16px */
   line-height: 130%;
   letter-spacing: 0;
